--- a/style.css
+++ b/style.css
@@ -239,18 +239,21 @@ table {
     margin-left: 20px;
     margin-bottom: 20px;
     position: relative;
-    border: #EAF0ED solid 1px;
 }
 
 .content .photo {
-    width: 300px;
+    width: 100%;
     height: 315px;
+    overflow: hidden;
+    border: #EAF0ED solid 1px;
 }
 
 .content .item {
     display: flex;
     font-size: 20px;
     color: #3F5D45;
+    border: #EAF0ED solid 1px;
+    margin-top: -1px;
 }
 
 .content .item h2 {
